fixing display issues on small screens

--- a/docs/main.css
+++ b/docs/main.css
@@ -211,12 +211,12 @@ figcaption {
 
 @media (max-width: 400px) {
     .header::before {
-        height: 18%;
+        height: 145px;
     }
 
     .header-items {
         position: absolute;
-        padding-top: 25px;
+        padding-top: 30px;
         padding-left: 95px;
     }
 }
